# src/routes/user.route.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-// import { verifyToken } from '../utils/verify';
+import verifyToken from '../utils/user.verify';
 import UserController from '../controllers/user/user.controller';
 
 
@@ -13,6 +13,9 @@ export default class UserRouter {
     }
     private initializeRoutes(): void {
         this.router.post('/createUser', this.userController.createUser);
-        this.router.post('/authenticate', this.userController.authenticate)
+        this.router.post('/authenticate', this.userController.authenticate);
+        this.router.post('/sendEmail', this.userController.sendEmail);
+        this.router.post('/resetPassword', this.userController.resetPassword);
+        this.router.post('/changePassword', verifyToken, this.userController.changePassword);
     }
 }
